@@ -3,6 +3,7 @@ CHANGELOG
 UNRELEASED
     * feat: easy commonJS require of plugins
     * test: add dependency-check step in tests
+    * refactor: use lodash-compat instead of unknown modules
 
 2015-06-03 3.5.0
     * fix: send a descriptive timeout error when it occurs
